[package]
name = "udp_test"
version = "0.1.0"
authors = ["Osman Karaketir <osmankaraketir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-util = { version = "0.4.0", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
http = "0.2"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
bincode = "1.3.1"
serde = { version = "1.0.117", features = ["derive"] }
# serde = "1.0"
# serde_derive = "1.0"

[[example]]
name = "echo-udp"
path = "echo-udp.rs"


[[example]]
name = "udp-client"
path = "udp-client.rs"

[[example]]
name = "my-client"
path = "my-client.rs"

[[example]]
name = "my-server"
path = "my-server.rs"
